# arawn

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BEHAVIOR.md  CHANGELOG.md  Cargo.toml  IDENTITY.md  MEMORY.md  README.md  arawn.toml  test-api.sh  test-conversation.sh
.angreal/: task_build.py  task_check.py  task_docs.py  task_test.py
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml  release.yml
.metis/: .index-dirty  code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  vision.md
.metis/adrs/: ARAWN-A-0001.md  ARAWN-A-0002.md  ARAWN-A-0003.md  ARAWN-A-0004.md  (+2 more)
crates/arawn/: Cargo.toml
crates/arawn-agent/: Cargo.toml
crates/arawn-agent/src/: agent.rs  compaction.rs  context.rs  error.rs  lib.rs  mcp.rs  orchestrator.rs  stream.rs  tool.rs  types.rs
crates/arawn-agent/src/indexing/: extraction.rs  gliner.rs  indexer.rs  mod.rs  ner.rs  report.rs  summarization.rs  types.rs
crates/arawn-agent/src/prompt/: bootstrap.rs  builder.rs  mod.rs  mode.rs
crates/arawn-agent/src/rlm/: integration_tests.rs  mod.rs  prompt.rs  types.rs
crates/arawn-agent/src/tool/: command_validator.rs  context.rs  execution.rs  gate.rs  mod.rs  output.rs  params.rs  registry.rs  validation.rs
crates/arawn-agent/src/tools/: catalog.rs  delegate.rs  explore.rs  file.rs  memory.rs  mod.rs  note.rs  search.rs  shell.rs  think.rs  web.rs  workflow.rs
crates/arawn-client/: Cargo.toml
crates/arawn-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/arawn-client/src/api/: agents.rs  chat.rs  config.rs  health.rs  mcp.rs  memory.rs  mod.rs  notes.rs  sessions.rs  tasks.rs  workstreams.rs
crates/arawn-config/: Cargo.toml
crates/arawn-config/src/: age_crypto.rs  client.rs  discovery.rs  error.rs  lib.rs  paths.rs  resolver.rs  secret_store.rs  secrets.rs  types.rs
crates/arawn-domain/: Cargo.toml
crates/arawn-domain/src/: error.rs  lib.rs
crates/arawn-domain/src/services/: chat.rs  mcp.rs  memory.rs  mod.rs
crates/arawn-llm/: Cargo.toml
crates/arawn-llm/src/: anthropic.rs  api_key.rs  backend.rs  client.rs  embeddings.rs  error.rs  interaction_log.rs  lib.rs  openai.rs  types.rs
crates/arawn-mcp/: Cargo.toml
crates/arawn-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/arawn-mcp/tests/: integration.rs  mock_server.rs
crates/arawn-memory/: Cargo.toml
crates/arawn-memory/src/: backend.rs  error.rs  graph.rs  lib.rs  types.rs  validation.rs  vector.rs
crates/arawn-memory/src/store/: graph_ops.rs  memory_ops.rs  mod.rs  note_ops.rs  query.rs  recall.rs  session_ops.rs  unified_ops.rs  vector_ops.rs
crates/arawn-oauth/: Cargo.toml
crates/arawn-oauth/src/: error.rs  lib.rs  oauth.rs  passthrough.rs  proxy.rs  token_manager.rs
crates/arawn-pipeline/: Cargo.toml
crates/arawn-pipeline/src/: catalog.rs  context.rs  definition.rs  engine.rs  error.rs  factory.rs  lib.rs  loader.rs  protocol.rs  sandbox.rs  task.rs
crates/arawn-pipeline/tests/: e2e_runtime_test.rs  engine_test.rs
crates/arawn-plugin/: Cargo.toml
crates/arawn-plugin/src/: agent_spawner.rs  cli_tool.rs  hooks.rs  lib.rs  manager.rs  manifest.rs  skill.rs  subscription.rs  types.rs  validation.rs  watcher.rs
crates/arawn-sandbox/: Cargo.toml
crates/arawn-sandbox/src/: config.rs  error.rs  lib.rs  manager.rs  platform.rs
crates/arawn-server/: Cargo.toml
crates/arawn-server/src/: auth.rs  config.rs  error.rs  lib.rs  ratelimit.rs  session_cache.rs  state.rs
crates/arawn-server/src/routes/: agents.rs  chat.rs  commands.rs  config.rs  health.rs  mcp.rs  memory.rs  mod.rs  openapi.rs  pagination.rs  sessions.rs  tasks.rs  workstreams.rs  ws.rs
crates/arawn-server/src/routes/ws/: connection.rs  handlers.rs  mod.rs  protocol.rs
crates/arawn-server/tests/: chat_integration.rs  context_management.rs  memory_integration.rs  server_integration.rs  validation_integration.rs
crates/arawn-server/tests/common/: mod.rs
crates/arawn-session/: Cargo.toml
crates/arawn-session/src/: cache.rs  config.rs  error.rs  lib.rs  persistence.rs  ttl.rs
crates/arawn-tui/: Cargo.toml
crates/arawn-tui/src/: app.rs  bounded.rs  client.rs  events.rs  focus.rs  input.rs  lib.rs  logs.rs  palette.rs  protocol.rs  sessions.rs  sidebar.rs
crates/arawn-tui/src/ui/: chat.rs  command_popup.rs  input.rs  layout.rs  logs.rs  mod.rs  palette.rs  sessions.rs  sidebar.rs  tools.rs
crates/arawn-types/: Cargo.toml
crates/arawn-types/src/: config.rs  delegation.rs  error.rs  fs_gate.rs  hooks.rs  lib.rs  memory.rs  message.rs  secret_resolver.rs  task.rs
crates/arawn-workstream/: Cargo.toml
crates/arawn-workstream/migrations/: V001__initial_schema.sql  V002__add_cascade_delete.sql
crates/arawn-workstream/src/: cleanup.rs  compression.rs  context.rs  directory.rs  error.rs  fs_gate.rs  lib.rs  manager.rs  message_store.rs  path_validator.rs  scratch.rs  session.rs  session_loader.rs  storage.rs  store.rs  types.rs  watcher.rs
crates/arawn-workstream/src/directory/: clone.rs  manager.rs  mod.rs  operations.rs  session.rs  usage.rs
crates/arawn/src/: main.rs
crates/arawn/src/client/: mod.rs
crates/arawn/src/commands/: agent.rs  ask.rs  auth.rs  chat.rs  config.rs  mcp.rs  memory.rs  mod.rs  notes.rs  output.rs  plugin.rs  repl.rs  research.rs  secrets.rs  start.rs  status.rs  stop.rs  tasks.rs  tui.rs
crates/arawn/tests/: cli_integration.rs
crates/gline-rs-vendored/: Cargo.toml
crates/gline-rs-vendored/src/model/: mod.rs
crates/gline-rs-vendored/src/model/input/: text.rs
crates/gline-rs-vendored/src/model/input/relation/: mod.rs
crates/gline-rs-vendored/src/model/input/tensors/: span.rs  token.rs
crates/gline-rs-vendored/src/model/output/: relation.rs  tensors.rs
crates/gline-rs-vendored/src/model/output/decoded/: span.rs  token.rs  token_flat.rs
crates/gline-rs-vendored/src/model/pipeline/: context.rs  relation.rs  span.rs  token.rs
crates/gline-rs-vendored/src/util/: memprof.rs  mod.rs
docs/: .gitignore  OPENCLAW_COMPARISON.md  book.toml  subagent-delegation.md
scripts/: install.sh  setup.sh
(+525 files in other folders)
