[package]
name = "arawn-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent core for Arawn - conversation loop, tools, and task execution"

[dependencies]
arawn-types = { workspace = true }
arawn-memory = { workspace = true }
arawn-llm = { workspace = true }
arawn-pipeline = { workspace = true }
arawn-mcp = { workspace = true }
cloacina-workflow = "0.3.1"

tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# For web tools
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.20"
url = "2.5"
urlencoding = "2.1"

# For search tools
glob = "0.3"
regex = "1.10"
walkdir = "2.5"

# For shell/PTY
portable-pty = "0.8"
dirs = "5.0"

# NER (GLiNER)
gline-rs-vendored = { workspace = true, optional = true }
orp = { package = "orp-vendored", path = "../orp-vendored", optional = true }

[features]
default = []
gliner = ["dep:gline-rs-vendored", "dep:orp"]

[dev-dependencies]
arawn-llm = { workspace = true, features = ["testing"] }
tempfile = "3.10"
serial_test = "3.2"
