[package]
name = "arawn-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain facade for Arawn - orchestrates agent, session, and MCP interactions"

[dependencies]
# Internal crates
arawn-types = { workspace = true }
arawn-agent = { workspace = true }
arawn-mcp = { workspace = true }
arawn-workstream = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
arawn-llm = { workspace = true }
tempfile = "3"
