[package]
name = "arawn-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for Arawn"
autobenches = false
autotests = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "process"] }
tempfile = "3.10"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bin]]
name = "mock-mcp-server"
path = "tests/mock_server.rs"
