[package]
name = "arawn-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OS-level sandboxing for shell command execution"

[dependencies]
# Sandboxing
sandbox-runtime = "0.1"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Paths
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
