[package]
name = "arawn-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI for Arawn"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { workspace = true }
futures = "0.3"

# WebSocket
tokio-tungstenite = { workspace = true }
url = "2.5"

# HTTP client SDK
arawn-client = { path = "../arawn-client" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
arawn-config = { path = "../arawn-config" }

# Synchronization (non-poisoning locks)
parking_lot = { workspace = true }
