[package]
name = "gline-rs-vendored"
authors = ["Frédérik Bilhaut <frederik.bilhaut@gmail.com>"]
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["NLP", "NER", "GLiNER", "Transformer"]
readme = "./Readme.md"
description = "Inference engine for GLiNER models"
homepage = "https://github.com/fbilhaut/gline-rs"
repository = "https://github.com/fbilhaut/gline-rs"
documentation = "https://docs.rs/gline-rs/"
exclude = [ "data", "models" ]

[lib]
name = "gliner"
path = "src/lib.rs"

# Examples removed — vendored crate, examples need model files

[dependencies]
composable = "0.9.0"
orp = { package = "orp-vendored", path = "../orp-vendored" }
regex = "1.11.1"
ort = { version = "2.0.0-rc.11" }
tokenizers = { version="0.21.0", features=["http"] }
ndarray = "0.17.0"
csv = "1.3"
cap = { version="0.1", optional=true }
memory-stats = { version="1.2.0", optional=true }
humansize = { version="2.1", optional=true }

[features]
default = []
memprof = ["cap", "memory-stats", "humansize"]
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
xnnpack = ["ort/xnnpack"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]

#[lints.clippy]
#unwrap_used = "warn"